--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Chicle&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="./style.css"/>
 </head>
 <body>
@@ -29,25 +30,27 @@
         <h1>Hi There!</h1>
 <h2>My Name is Aida Blinstrubyte </h2>
 <div class = "flexbox-container">
-    <div id="flexbox"><img id="aidaImg"src="images/AidaPhoto.png"></div>
+    <div id="flexbox"><img id="aidaImg"src="images/AidaPhoto.png"alt="green, yellow, and coral shapes with an portrait image of a person in the middle"></div>
     <div class="flexbox" id="p1" >Prior to UX Design I’ve worked in the beauty industry and service industry.</div>
     <div class="flexbox" id="p2" >All my past experiences have involved working with people and providing them the best experience that they can encounter from changing their look to having a customer find the right product.</div>
     <div class="flexbox" id="p3" > As a creative I’m passionate about user research and creating the most impactful user experiences</div>
     <div class="flexbox" id="p4" > As a human in an everyday world  I’m  sipping on an iced chai latte and exploring new small business cafes.</div>
     <h2 class="flexbox" id="clickResume">You can click here to view my resume</h2>
-    <button class="">Resume</button>
+    <button class="clickMyResume">Resume</button>
 </div>
 
 <footer>
             
     <ul class="lines" id="footerAbout">
-        <li class="lines">Contact</a></li>
-        <li class="lines"> Projects</a></li>
-        <li class="lines">About</a></li>
-       <li class="lines">Home</a></li>
+        <li class="lines">Contact</li>
+        <li class="lines"> Projects</li>
+        <li class="lines">About</li>
+       <li class="lines">Home</li>
     </ul>
     <div id="lineFooter">Aida Blinstrubyte ©  2022</div>
 
 </footer>
 </body>
+<script src="js/index.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </html>
