jquery in script

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Chicle&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="./style.css"/>
 </head>
 <body>
@@ -34,8 +35,10 @@
         <a href="" target="_blank">
             <img src="images/gmail.png"  id="gmailIcon" > 
         </a>  
-        <a href="" target="_blank">
-            <img src="images/resume.png"  id="resumeIcon" > 
+        <a href="https://docs.google.com/document/d/1WXGuS3nc76KaE9Jll_nn4jS_mr9zFWB4TfScXcbeBJU/edit?usp=sharing" target="_blank">
+            <img src="images/resume.png"  id="resumeIcon" >
+
+             
         </a>  
     </div>
 </div>
@@ -58,4 +61,6 @@
        
         </footer>
         </body>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="js/index.js"></script>
         </html>
