--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Chicle&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="./style.css"/>
 </head>
 
@@ -32,7 +33,7 @@
 <div class="grid-container">
     <div class="grid-item number">01</div>
     <div class="grid-item">
-        <img src="images/rootedPhone.png" id= "rootedPhone">
+        <img src="images/rootedPhone.png" id= "rootedPhone" alt="website inside">
     </div>
     <div class="grid-item" id="rootedHeading">Rooted
         <p class="#textforRooted">
@@ -67,4 +68,6 @@
 </footer>
   
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="js/index.js"></script>
 </html>
