changed contact to resume

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <nav>
         <ul>
 
-            <li><a href="./contact.html">Contact</a></li>
+            <li><a href="./resume.html">Resume</a></li>
             <li><a href="./projects.html">Projects</a></li>
             <li><a href="./about.html">About</a></li>
             <div class="myDiv"></div>
@@ -43,7 +43,7 @@
 <footer>
             
     <ul class="lines" id="footerAbout">
-        <li class="lines">Contact</li>
+        <li class="lines">Resume</li>
         <li class="lines"> Projects</li>
         <li class="lines">About</li>
        <li class="lines">Home</li>
