--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
     <!-- Navbar -->
     <nav>
         <ul>
-            <li><a href="./contact.html">Contact</a></li>
+            <li><a href="./resume.html">Resume</a></li>
             <li><a href="./projects.html">Projects</a></li>
             <li><a href="./about.html">About</a></li>
             <div class="myDiv">
