added grid system to projects

--- a/projects.html
+++ b/projects.html
@@ -41,18 +41,21 @@
             individuals with restaurants that contribute 
             to helping the community</h6> 
         </p>
+        <button class = "projectBtn" >Learn More</button>
     </div>  
+    <div class="grid-item numberTwo">02</div>
+    <div class="grid-item">
+        <img src="images/car.png" id= "carPhone" alt="iphone app display">
+    </div>
     <div class="grid-item" id="carHeading">Donate Car Cancer
         <p id="textforCar">
             A non-profit organization that collects and 
             appraises donated vehicles to help people with cancer.
         </p>
+        <button class = "projectBtn Btn2">Learn More</button>
        
     </div>
-    <div class="grid-item">
-        <img src="images/car.png" id= "carPhone" alt="iphone app display">
-    </div>
-    <div class="grid-item numberTwo">02</div>  
+      
   </div>
   
 <!-- footer -->
