--- a/about.html
+++ b/about.html
@@ -36,10 +36,12 @@
     <div class="flexbox" id="p3" > As a creative I’m passionate about user research and creating the most impactful user experiences</div>
     <div class="flexbox" id="p4" > As a human in an everyday world  I’m  sipping on an iced chai latte and exploring new small business cafes.</div>
     <h2 class="flexbox" id="clickResume">You can click here to view my resume</h2>
-    <br>
+</div>
+    <div class="container">
     <button class="clickMyResume">Resume</button>
 </div>
-
+<br>
+<div>
 <footer>
             
     <ul class="lines" id="footerAbout">
@@ -51,6 +53,7 @@
     <div id="lineFooter">Aida Blinstrubyte ©  2022</div>
 
 </footer>
+</div>
 </body>
 <script src="js/index.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
