--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href="./about.html">About</a></li>
             <div class="myDiv">
             </ul>
-            <a href="indexx.html">
+            <a href="index.html">
                 <img src="images/logoimg.png"  id="logo" alt="green and orange colors"> 
             </a>       
         </nav>
